# ros2_drone_sim

./: .gitignore  LICENSE  README.md  SETUP.md  connect.sh  docker-compose.yml  docker_ros_snippets.md  run_guide.txt  script_info.txt  setup_x11.sh  start.sh  start_simulation.sh
docker/: Dockerfile
scripts/: test_gui.sh
src/: README.md
src/simple_drone_sim/: package.xml  setup.cfg  setup.py
src/simple_drone_sim/simple_drone_sim/: drone_controller.py  drone_physics.py
src/simple_drone_sim/simple_drone_sim/description/: drone.urdf.xacro
src/simple_drone_sim/simple_drone_sim/launch/: display.launch.py
src/simple_drone_sim/simple_drone_sim/rviz/: drone.rviz
