<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_drone_sim</name>
  <version>0.0.0</version>
  <description>A simple drone simulation package</description>
<maintainer email="lafeawo@bowiestate.edu">Drone Developer</maintainer>
<license>MIT</license>

<depend>rclpy</depend>
<depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
<depend>robot_state_publisher</depend>
<depend>geometry_msgs</depend>
<depend>nav_msgs</depend>
<depend>tf2_ros</depend>
<depend>sensor_msgs</depend>

<test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
